# ctcdecode

./: README.md  setup.py
ctcdecode/: CMakeLists.txt  __init__.py
ctcdecode/src/: binding.cpp  binding.h  constants.h  ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h  decoder.cpp  decoder.h  decoder_options.h  decoder_utils.cpp  decoder_utils.h  hotword_scorer.cpp  hotword_scorer.h  logger.h  output.h  path_trie.cpp  scorer.cpp  scorer.h
tests/cpp/: CMakeLists.txt  test_decoder.cpp
tests/fixtures/: logits.pt
tests/python/: test_decode.py
tools/: build_fst.cpp  build_fst.h  build_fst_main.cpp
